--- a/planning.html
+++ b/planning.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="fr">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <title>Planning — CS Consenvoye</title>
 
 <style>
 :root{
   --orange:#ff6b00;
-  --dark:#0c0c0c;
-  --card:#1a1a1a;
+  --dark:#0b0b0b;
+  --card:rgba(0,0,0,.55);
   --text:#f4f4f4;
 }
 
@@ -18,18 +18,28 @@ html,body{height:100%}
 body{
   margin:0;
   font-family:system-ui,-apple-system,Segoe UI,Roboto;
-  background:var(--dark);
   color:var(--text);
+  background:#000;
   overflow:hidden;
 }
 
+/* BACKGROUND CONSERVÉ */
+.bg{
+  position:fixed;
+  inset:0;
+  background:
+    linear-gradient(180deg, rgba(0,0,0,.6), rgba(0,0,0,.6)),
+    url("background.png") center/cover no-repeat;
+  z-index:-1;
+}
+
+/* HEADER */
 header{
-  background:linear-gradient(180deg,var(--orange),#cc4e00);
   padding:14px;
   text-align:center;
   font-weight:900;
   letter-spacing:.5px;
-  font-size:20px;
+  background:linear-gradient(180deg,var(--orange),#c94f00);
 }
 
 .container{
@@ -71,76 +81,83 @@ header{
 
 .weekdays div{
   text-align:center;
-  font-size:12px;
+  font-size:11px;
   opacity:.7;
-}
-
-.grid{
-  flex:0 0 auto;
 }
 
 .day{
   background:var(--card);
-  border-radius:10px;
+  border-radius:8px;
   padding:6px;
   text-align:right;
   font-weight:800;
   font-size:13px;
-  min-height:44px;
-  position:relative;
+  min-height:42px;
 }
 
-.day.clickable{
-  cursor:pointer;
-  transition:.15s;
-}
-.day.clickable:active{
-  transform:scale(.96);
-}
+.day.disabled{opacity:.25}
+.day.clickable{cursor:pointer}
+.day.clickable:active{transform:scale(.95)}
 
-.day.disabled{
-  opacity:.25;
-}
-
-.day.multi{
-  color:white;
-}
-
+/* LÉGENDE DISCRÈTE */
 .legend{
-  margin-top:12px;
+  margin-top:10px;
   display:flex;
   flex-wrap:wrap;
-  gap:10px;
-  font-size:12px;
+  gap:8px;
+  font-size:11px;
 }
 
 .legend-item{
   display:flex;
   align-items:center;
   gap:6px;
-  background:var(--card);
-  padding:6px 10px;
+  background:rgba(0,0,0,.4);
+  padding:4px 8px;
   border-radius:20px;
 }
 
 .legend-dot{
-  width:12px;
-  height:12px;
+  width:10px;
+  height:10px;
   border-radius:50%;
 }
 
-.details{
-  margin-top:10px;
-  background:var(--card);
-  border-radius:12px;
-  padding:10px;
-  flex:1;
+/* PANEL SLIDE */
+.panel-overlay{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.5);
+  display:flex;
+  align-items:flex-end;
+  opacity:0;
+  pointer-events:none;
+  transition:.3s;
+}
+
+.panel-overlay.active{
+  opacity:1;
+  pointer-events:auto;
+}
+
+.panel{
+  width:100%;
+  height:55%;
+  background:#111;
+  border-top-left-radius:18px;
+  border-top-right-radius:18px;
+  padding:14px;
+  transform:translateY(100%);
+  transition:.3s;
   overflow:auto;
 }
 
-.details h3{
-  margin:0 0 8px 0;
-  font-size:14px;
+.panel-overlay.active .panel{
+  transform:translateY(0);
+}
+
+.panel h3{
+  margin:0 0 10px 0;
   font-weight:900;
   color:var(--orange);
 }
@@ -148,27 +165,25 @@ header{
 .event{
   margin-bottom:8px;
   padding-bottom:6px;
-  border-bottom:1px solid rgba(255,255,255,.08);
+  border-bottom:1px solid rgba(255,255,255,.1);
 }
 
-.event:last-child{
-  border:none;
-}
+.event-title{font-weight:900}
+.event-time{font-size:12px;opacity:.7}
 
-.event-title{
-  font-weight:900;
-  font-size:13px;
+.close-btn{
+  position:absolute;
+  top:10px;
+  right:15px;
+  font-size:18px;
+  cursor:pointer;
 }
-
-.event-time{
-  font-size:12px;
-  opacity:.7;
-}
-
 </style>
 </head>
 
 <body>
+
+<div class="bg"></div>
 
 <header>PLANNING 2026</header>
 
@@ -186,27 +201,28 @@ header{
 </div>
 
 <div class="grid" id="grid"></div>
-
 <div class="legend" id="legend"></div>
 
-<div class="details" id="details">
-  <h3>Sélectionne un jour</h3>
 </div>
 
+<div class="panel-overlay" id="overlay">
+  <div class="panel">
+    <div class="close-btn" id="close">✕</div>
+    <div id="panelContent"></div>
+  </div>
 </div>
 
 <script>
 const API="https://script.google.com/macros/s/XXXX/exec";
 const YEAR=2026;
-
 const MONTHS=["Janvier","Février","Mars","Avril","Mai","Juin","Juillet","Août","Septembre","Octobre","Novembre","Décembre"];
 
 let currentMonth=0;
-let YEAR_EVENTS=[];
+let EVENTS=[];
 let CAT_COLORS={};
 
 function jsonp(url,cb){
-  return new Promise((res,rej)=>{
+  return new Promise(res=>{
     window[cb]=data=>res(data);
     const s=document.createElement("script");
     s.src=url;
@@ -217,19 +233,20 @@ function jsonp(url,cb){
 async function loadData(){
   const cb="cb_"+Math.random().toString(36).slice(2);
   const data=await jsonp(`${API}?view=planning_year&year=${YEAR}&callback=${cb}`,cb);
-  YEAR_EVENTS=data.events||[];
+  EVENTS=data.events||[];
   buildCalendar();
 }
 
 function buildCalendar(){
   document.getElementById("monthTitle").innerText=MONTHS[currentMonth];
-
   const grid=document.getElementById("grid");
   grid.innerHTML="";
 
   const first=new Date(YEAR,currentMonth,1);
   const last=new Date(YEAR,currentMonth+1,0);
   const startDay=(first.getDay()+6)%7;
+
+  const monthEvents=EVENTS.filter(e=>e.date.startsWith(`${YEAR}-${String(currentMonth+1).padStart(2,"0")}`));
 
   for(let i=0;i<42;i++){
     const dayNum=i-startDay+1;
@@ -245,11 +262,11 @@ function buildCalendar(){
     cell.innerText=dayNum;
 
     const dateStr=`${YEAR}-${String(currentMonth+1).padStart(2,"0")}-${String(dayNum).padStart(2,"0")}`;
-    const events=YEAR_EVENTS.filter(e=>e.date===dateStr);
+    const dayEvents=monthEvents.filter(e=>e.date===dateStr);
 
-    if(events.length){
-      const cats=[...new Set(events.map(e=>e.category))];
-      const colors=cats.map(c=>CAT_COLORS[c]||"#666");
+    if(dayEvents.length){
+      const cats=[...new Set(dayEvents.map(e=>e.category))];
+      const colors=cats.map(c=>CAT_COLORS[c]||"#ff6b00");
 
       if(colors.length===1){
         cell.style.background=colors[0];
@@ -260,51 +277,53 @@ function buildCalendar(){
       }
 
       cell.classList.add("clickable");
-
-      cell.onclick=()=>showDetails(dateStr,events);
+      cell.onclick=()=>openPanel(dateStr,dayEvents);
     }
 
     grid.appendChild(cell);
   }
 
-  buildLegend();
+  buildLegend(monthEvents);
 }
 
-function buildLegend(){
+function buildLegend(monthEvents){
   const legend=document.getElementById("legend");
   legend.innerHTML="";
-  const used=[...new Set(YEAR_EVENTS.filter(e=>e.date.startsWith(`${YEAR}-${String(currentMonth+1).padStart(2,"0")}`)).map(e=>e.category))];
-
+  const used=[...new Set(monthEvents.map(e=>e.category))];
   used.forEach(cat=>{
     const item=document.createElement("div");
     item.className="legend-item";
     const dot=document.createElement("div");
     dot.className="legend-dot";
-    dot.style.background=CAT_COLORS[cat]||"#666";
+    dot.style.background=CAT_COLORS[cat]||"#ff6b00";
     item.appendChild(dot);
     item.append(cat);
     legend.appendChild(item);
   });
 }
 
-function showDetails(date,events){
-  const box=document.getElementById("details");
-  box.innerHTML=`<h3>${date.split("-").reverse().join("/")}</h3>`;
+function openPanel(date,events){
+  const overlay=document.getElementById("overlay");
+  const content=document.getElementById("panelContent");
+  content.innerHTML=`<h3>${date.split("-").reverse().join("/")}</h3>`;
   events.forEach(e=>{
     const div=document.createElement("div");
     div.className="event";
     div.innerHTML=`<div class="event-title">${e.title}</div>
-                   <div class="event-time">${e.start||""} ${e.end?("- "+e.end):""}</div>`;
-    box.appendChild(div);
+                   <div class="event-time">${e.start||""} ${e.end?("- "+e.end):""}</div>
+                   ${e.details?(`<div style="font-size:12px;margin-top:4px">${e.details}</div>`):""}`;
+    content.appendChild(div);
   });
+  overlay.classList.add("active");
 }
 
-document.getElementById("prev").onclick=()=>{
-  if(currentMonth>0){currentMonth--;buildCalendar();}
+document.getElementById("close").onclick=()=>document.getElementById("overlay").classList.remove("active");
+document.getElementById("overlay").onclick=e=>{
+  if(e.target.id==="overlay") document.getElementById("overlay").classList.remove("active");
 };
-document.getElementById("next").onclick=()=>{
-  if(currentMonth<11){currentMonth++;buildCalendar();}
-};
+
+document.getElementById("prev").onclick=()=>{ if(currentMonth>0){currentMonth--;buildCalendar();}};
+document.getElementById("next").onclick=()=>{ if(currentMonth<11){currentMonth++;buildCalendar();}};
 
 loadData();
 </script>
