--- a/planning.html
+++ b/planning.html
@@ -8,11 +8,9 @@
 <style>
 :root{
   --orange:#ff6b00;
-  --dark:#0b0b0b;
   --card:rgba(0,0,0,.55);
   --text:#f4f4f4;
 }
-
 *{box-sizing:border-box}
 html,body{height:100%}
 body{
@@ -23,10 +21,9 @@ body{
   overflow:hidden;
 }
 
-/* BACKGROUND CONSERVÉ */
+/* ✅ BACKGROUND */
 .bg{
-  position:fixed;
-  inset:0;
+  position:fixed; inset:0;
   background:
     linear-gradient(180deg, rgba(0,0,0,.6), rgba(0,0,0,.6)),
     url("background.png") center/cover no-repeat;
@@ -55,7 +52,6 @@ header{
   align-items:center;
   margin-bottom:10px;
 }
-
 .monthbar button{
   background:var(--card);
   border:none;
@@ -66,7 +62,6 @@ header{
   font-size:18px;
   cursor:pointer;
 }
-
 .monthbar h2{
   margin:0;
   font-size:18px;
@@ -78,7 +73,6 @@ header{
   grid-template-columns:repeat(7,1fr);
   gap:6px;
 }
-
 .weekdays div{
   text-align:center;
   font-size:11px;
@@ -94,33 +88,37 @@ header{
   font-size:13px;
   min-height:42px;
 }
-
 .day.disabled{opacity:.25}
 .day.clickable{cursor:pointer}
 .day.clickable:active{transform:scale(.95)}
 
-/* LÉGENDE DISCRÈTE */
+/* ✅ LÉGENDE DISCRÈTE (TOUJOURS) */
 .legend{
   margin-top:10px;
   display:flex;
   flex-wrap:wrap;
   gap:8px;
   font-size:11px;
+  line-height:1;
+  max-height: 64px; /* limite place */
+  overflow:auto; /* scroll interne si beaucoup */
+  padding-bottom:2px;
 }
-
 .legend-item{
   display:flex;
   align-items:center;
   gap:6px;
-  background:rgba(0,0,0,.4);
+  background:rgba(0,0,0,.40);
   padding:4px 8px;
-  border-radius:20px;
+  border-radius:999px;
+  border:1px solid rgba(255,255,255,.10);
+  white-space:nowrap;
 }
-
 .legend-dot{
   width:10px;
   height:10px;
   border-radius:50%;
+  border:1px solid rgba(255,255,255,.18);
 }
 
 /* PANEL SLIDE */
@@ -132,44 +130,40 @@ header{
   align-items:flex-end;
   opacity:0;
   pointer-events:none;
-  transition:.3s;
+  transition:.25s;
 }
-
 .panel-overlay.active{
   opacity:1;
   pointer-events:auto;
 }
-
 .panel{
   width:100%;
   height:55%;
-  background:#111;
+  background:rgba(0,0,0,.86);
   border-top-left-radius:18px;
   border-top-right-radius:18px;
   padding:14px;
   transform:translateY(100%);
-  transition:.3s;
+  transition:.25s;
   overflow:auto;
 }
-
 .panel-overlay.active .panel{
   transform:translateY(0);
 }
-
 .panel h3{
   margin:0 0 10px 0;
   font-weight:900;
   color:var(--orange);
 }
-
 .event{
   margin-bottom:8px;
   padding-bottom:6px;
-  border-bottom:1px solid rgba(255,255,255,.1);
+  border-bottom:1px solid rgba(255,255,255,.10);
 }
-
+.event:last-child{border:none}
 .event-title{font-weight:900}
-.event-time{font-size:12px;opacity:.7}
+.event-time{font-size:12px;opacity:.75}
+.event-note{font-size:12px;margin-top:4px;opacity:.92}
 
 .close-btn{
   position:absolute;
@@ -177,32 +171,32 @@ header{
   right:15px;
   font-size:18px;
   cursor:pointer;
+  user-select:none;
 }
 </style>
 </head>
 
 <body>
-
 <div class="bg"></div>
 
 <header>PLANNING 2026</header>
 
 <div class="container">
+  <div class="monthbar">
+    <button id="prev">‹</button>
+    <h2 id="monthTitle"></h2>
+    <button id="next">›</button>
+  </div>
 
-<div class="monthbar">
-  <button id="prev">‹</button>
-  <h2 id="monthTitle"></h2>
-  <button id="next">›</button>
-</div>
+  <div class="weekdays">
+    <div>Lun</div><div>Mar</div><div>Mer</div>
+    <div>Jeu</div><div>Ven</div><div>Sam</div><div>Dim</div>
+  </div>
 
-<div class="weekdays">
-  <div>Lun</div><div>Mar</div><div>Mer</div>
-  <div>Jeu</div><div>Ven</div><div>Sam</div><div>Dim</div>
-</div>
+  <div class="grid" id="grid"></div>
 
-<div class="grid" id="grid"></div>
-<div class="legend" id="legend"></div>
-
+  <!-- ✅ Légende globale avec couleurs -->
+  <div class="legend" id="legend"></div>
 </div>
 
 <div class="panel-overlay" id="overlay">
@@ -213,32 +207,95 @@ header{
 </div>
 
 <script>
-const API="https://script.google.com/macros/s/XXXX/exec";
+const API="https://script.google.com/macros/s/XXXX/exec"; // ✅ mets ton /exec
 const YEAR=2026;
+
 const MONTHS=["Janvier","Février","Mars","Avril","Mai","Juin","Juillet","Août","Septembre","Octobre","Novembre","Décembre"];
+
+/* ✅ Fallback couleurs si l'onglet categories est vide */
+const DEFAULT_CATS = [
+  ["Navette", "#2f7bd3"],
+  ["FMA centre", "#ffb15a"],
+  ["FMA équipe 1", "#2fd36b"],
+  ["FMA équipe 2", "#d98910"],
+  ["RECSEC", "#9b7bff"],
+  ["Sainte Barbe", "#ff4d4d"],
+  ["JSP", "#4dabf7"]
+];
 
 let currentMonth=0;
 let EVENTS=[];
-let CAT_COLORS={};
+let CAT_COLORS={}; // category -> color
 
 function jsonp(url,cb){
-  return new Promise(res=>{
-    window[cb]=data=>res(data);
+  return new Promise((res,rej)=>{
     const s=document.createElement("script");
+    const cleanup=()=>{ try{delete window[cb];}catch(e){} s.remove(); };
+    const timer=setTimeout(()=>{cleanup(); rej(new Error("Timeout"));}, 12000);
+    window[cb]=(data)=>{ clearTimeout(timer); cleanup(); res(data); };
     s.src=url;
-    document.body.appendChild(s);
+    s.onerror=()=>{ clearTimeout(timer); cleanup(); rej(new Error("JSONP error")); };
+    document.head.appendChild(s);
   });
 }
 
+function mergeDefaultCats_(){
+  // si CAT_COLORS vide ou partiel, on complète
+  const def = Object.fromEntries(DEFAULT_CATS);
+  CAT_COLORS = { ...def, ...CAT_COLORS };
+}
+
+function buildLegendGlobal_(){
+  const legend=document.getElementById("legend");
+  legend.innerHTML="";
+
+  const entries = Object.entries(CAT_COLORS)
+    .sort((a,b)=>a[0].localeCompare(b[0], "fr"));
+
+  for(const [cat,color] of entries){
+    const item=document.createElement("div");
+    item.className="legend-item";
+    const dot=document.createElement("div");
+    dot.className="legend-dot";
+    dot.style.background=color || "#666";
+    item.appendChild(dot);
+    item.append(cat);
+    legend.appendChild(item);
+  }
+}
+
 async function loadData(){
-  const cb="cb_"+Math.random().toString(36).slice(2);
-  const data=await jsonp(`${API}?view=planning_year&year=${YEAR}&callback=${cb}`,cb);
-  EVENTS=data.events||[];
+  // 1) categories (couleurs)
+  try{
+    const cb1="cb_cat_"+Math.random().toString(36).slice(2);
+    const cats=await jsonp(`${API}?view=planning_categories&callback=${cb1}`, cb1);
+    if(cats && cats.ok && Array.isArray(cats.categories)){
+      const map={};
+      for(const c of cats.categories){
+        if(c && c.category){
+          map[c.category]=c.color || "#666";
+        }
+      }
+      CAT_COLORS = map;
+    }
+  }catch(e){
+    // ignore
+  }
+
+  mergeDefaultCats_();
+  buildLegendGlobal_();
+
+  // 2) events année
+  const cb2="cb_year_"+Math.random().toString(36).slice(2);
+  const data=await jsonp(`${API}?view=planning_year&year=${YEAR}&callback=${cb2}`, cb2);
+  EVENTS=(data && data.ok && Array.isArray(data.events)) ? data.events : [];
+
   buildCalendar();
 }
 
 function buildCalendar(){
   document.getElementById("monthTitle").innerText=MONTHS[currentMonth];
+
   const grid=document.getElementById("grid");
   grid.innerHTML="";
 
@@ -246,7 +303,8 @@ function buildCalendar(){
   const last=new Date(YEAR,currentMonth+1,0);
   const startDay=(first.getDay()+6)%7;
 
-  const monthEvents=EVENTS.filter(e=>e.date.startsWith(`${YEAR}-${String(currentMonth+1).padStart(2,"0")}`));
+  const monthPrefix = `${YEAR}-${String(currentMonth+1).padStart(2,"0")}-`;
+  const monthEvents = EVENTS.filter(e => String(e.date||"").startsWith(monthPrefix));
 
   for(let i=0;i<42;i++){
     const dayNum=i-startDay+1;
@@ -265,56 +323,81 @@ function buildCalendar(){
     const dayEvents=monthEvents.filter(e=>e.date===dateStr);
 
     if(dayEvents.length){
-      const cats=[...new Set(dayEvents.map(e=>e.category))];
-      const colors=cats.map(c=>CAT_COLORS[c]||"#ff6b00");
+      // catégories uniques
+      const cats=[...new Set(dayEvents.map(e=>String(e.category||"").trim()).filter(Boolean))];
+      const colors=cats.map(c=>CAT_COLORS[c]||"#666");
 
       if(colors.length===1){
         cell.style.background=colors[0];
       }else if(colors.length===2){
         cell.style.background=`linear-gradient(135deg, ${colors[0]} 50%, ${colors[1]} 50%)`;
-      }else{
+      }else if(colors.length>=3){
         cell.style.background=colors[0];
+        // petit badge "+N" discret
+        const badge=document.createElement("div");
+        badge.textContent="+"+(colors.length-1);
+        badge.style.position="absolute";
+        badge.style.left="6px";
+        badge.style.bottom="6px";
+        badge.style.fontSize="10px";
+        badge.style.fontWeight="900";
+        badge.style.padding="2px 6px";
+        badge.style.borderRadius="999px";
+        badge.style.background="rgba(0,0,0,.35)";
+        badge.style.border="1px solid rgba(255,255,255,.18)";
+        cell.style.position="relative";
+        cell.appendChild(badge);
       }
 
-      cell.classList.add("clickable");
-      cell.onclick=()=>openPanel(dateStr,dayEvents);
+      // ✅ cliquable seulement si note (details) non vide
+      const hasNote = dayEvents.some(e => String(e.details||"").trim() !== "");
+      if(hasNote){
+        cell.classList.add("clickable");
+        cell.onclick=()=>openPanel(dateStr, dayEvents);
+      }
     }
 
     grid.appendChild(cell);
   }
-
-  buildLegend(monthEvents);
-}
-
-function buildLegend(monthEvents){
-  const legend=document.getElementById("legend");
-  legend.innerHTML="";
-  const used=[...new Set(monthEvents.map(e=>e.category))];
-  used.forEach(cat=>{
-    const item=document.createElement("div");
-    item.className="legend-item";
-    const dot=document.createElement("div");
-    dot.className="legend-dot";
-    dot.style.background=CAT_COLORS[cat]||"#ff6b00";
-    item.appendChild(dot);
-    item.append(cat);
-    legend.appendChild(item);
-  });
 }
 
 function openPanel(date,events){
   const overlay=document.getElementById("overlay");
   const content=document.getElementById("panelContent");
+
+  const list = events
+    .filter(e => String(e.details||"").trim() !== "")
+    .sort((a,b)=>String(a.start||"").localeCompare(String(b.start||"")));
+
   content.innerHTML=`<h3>${date.split("-").reverse().join("/")}</h3>`;
-  events.forEach(e=>{
-    const div=document.createElement("div");
-    div.className="event";
-    div.innerHTML=`<div class="event-title">${e.title}</div>
-                   <div class="event-time">${e.start||""} ${e.end?("- "+e.end):""}</div>
-                   ${e.details?(`<div style="font-size:12px;margin-top:4px">${e.details}</div>`):""}`;
-    content.appendChild(div);
-  });
+
+  if(!list.length){
+    content.innerHTML+=`<div style="opacity:.75;font-size:12px">Aucune note.</div>`;
+  }else{
+    for(const e of list){
+      const cat = String(e.category||"").trim();
+      const col = CAT_COLORS[cat] || "#666";
+      const div=document.createElement("div");
+      div.className="event";
+      div.innerHTML=`
+        <div class="event-title">${escapeHtml(e.title||"")}</div>
+        <div class="event-time">${escapeHtml(e.start||"")}${e.end?(" – "+escapeHtml(e.end)):""} • <span style="font-weight:900;color:${col}">${escapeHtml(cat||"")}</span></div>
+        <div class="event-note">${escapeHtml(e.details||"")}</div>
+      `;
+      content.appendChild(div);
+    }
+  }
+
   overlay.classList.add("active");
+}
+
+function escapeHtml(s){
+  return (s==null ? "" : String(s))
+    .replaceAll("&","&amp;")
+    .replaceAll("<","&lt;")
+    .replaceAll(">","&gt;")
+    .replaceAll('"',"&quot;")
+    .replaceAll("'","&#039;");
 }
 
 document.getElementById("close").onclick=()=>document.getElementById("overlay").classList.remove("active");
@@ -327,6 +410,5 @@ document.getElementById("next").onclick=()=>{ if(currentMonth<11){currentMonth++
 
 loadData();
 </script>
-
 </body>
 </html>
