--- a/planning.html
+++ b/planning.html
@@ -225,7 +225,7 @@ header{
 </div>
 
 <script>
-const API="https://script.google.com/macros/s/XXXX/exec"; // ✅ mets ton /exec
+const API="https://script.google.com/macros/s/AKfycbzPHCDdW7wkFCVkMOL_2srZmdnjZ1QKmToUFtqIZBPjSUNtOwM-Ac7ua0w9dhCv3oI/exec" // ✅ mets ton /exec
 const YEAR=2026;
 
 const MONTHS=["Janvier","Février","Mars","Avril","Mai","Juin","Juillet","Août","Septembre","Octobre","Novembre","Décembre"];
