--- a/planning.html
+++ b/planning.html
@@ -8,8 +8,8 @@
 <style>
 :root{
   --orange:#ff6b00;
-  --card:rgba(0,0,0,.55);
   --text:#f4f4f4;
+  --card:rgba(0,0,0,.55);
 }
 *{box-sizing:border-box}
 html,body{height:100%}
@@ -18,14 +18,14 @@ body{
   font-family:system-ui,-apple-system,Segoe UI,Roboto;
   color:var(--text);
   background:#000;
-  overflow:hidden;
+  overflow:hidden; /* page fixe */
 }
 
 /* ✅ BACKGROUND */
 .bg{
   position:fixed; inset:0;
   background:
-    linear-gradient(180deg, rgba(0,0,0,.6), rgba(0,0,0,.6)),
+    linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.65)),
     url("background.png") center/cover no-repeat;
   z-index:-1;
 }
@@ -34,11 +34,12 @@ body{
 header{
   padding:14px;
   text-align:center;
-  font-weight:900;
-  letter-spacing:.5px;
+  font-weight:950;
+  letter-spacing:.6px;
   background:linear-gradient(180deg,var(--orange),#c94f00);
 }
 
+/* layout */
 .container{
   padding:12px;
   display:flex;
@@ -46,7 +47,6 @@ header{
   height:calc(100% - 52px);
 }
 
-/* top bar */
 .monthbar{
   display:flex;
   justify-content:space-between;
@@ -54,19 +54,22 @@ header{
   margin-bottom:10px;
 }
 .monthbar button{
-  background:var(--card);
-  border:none;
+  background:rgba(0,0,0,.45);
+  border:1px solid rgba(255,255,255,.10);
   color:white;
   width:40px;
   height:40px;
-  border-radius:10px;
+  border-radius:12px;
   font-size:18px;
   cursor:pointer;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
 .monthbar h2{
   margin:0;
   font-size:18px;
-  font-weight:900;
+  font-weight:950;
+  text-shadow: 0 10px 20px rgba(0,0,0,.45);
 }
 
 .weekdays,.grid{
@@ -77,78 +80,114 @@ header{
 .weekdays div{
   text-align:center;
   font-size:11px;
-  opacity:.7;
+  opacity:.75;
 }
 
-/* day cells */
+/* ✅ DAYS : lisibles + couleurs visibles */
 .day{
-  background:var(--card);
-  border-radius:8px;
-  padding:6px;
-  text-align:right;
-  font-weight:900;
-  font-size:13px;
-  min-height:42px;
+  border-radius:12px;
+  min-height:46px;
+  padding:8px;
   position:relative;
-}
-.day.disabled{opacity:.25}
-.day.clickable{cursor:pointer}
-.day.clickable:active{transform:scale(.95)}
 
-/* ✅ LÉGENDE : colonne bas-gauche, + gros, carrés */
-.legend{
-  position: fixed;
-  left: 12px;
-  bottom: 18px;
-  z-index: 5;
+  background: rgba(0,0,0,.62);
+  border:1px solid rgba(255,255,255,.10);
+  box-shadow: 0 10px 24px rgba(0,0,0,.28);
 
   display:flex;
-  flex-direction:column;
-  gap:10px;
-
-  max-height: 45vh;
-  overflow:auto;
-
-  padding:10px 10px;
-  border-radius:14px;
-  background: rgba(0,0,0,.35);
-  border:1px solid rgba(255,255,255,.10);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
+  justify-content:flex-end;
+  align-items:flex-start;
 }
+.day.disabled{opacity:.18}
+.day.clickable{cursor:pointer}
+.day.clickable:active{transform:scale(.96)}
+
+.day .num{
+  position:relative;
+  z-index:2;
+  font-weight:950;
+  font-size:14px;
+  text-shadow: 0 10px 18px rgba(0,0,0,.6);
+}
+
+/* voile pour garder le chiffre lisible sur couleurs */
+.day[data-colored="1"]::after{
+  content:"";
+  position:absolute; inset:0;
+  border-radius:12px;
+  background: rgba(0,0,0,.18);
+}
+
+/* badge +N */
+.badge{
+  position:absolute;
+  left:7px;
+  bottom:7px;
+  font-size:10px;
+  font-weight:950;
+  padding:2px 7px;
+  border-radius:999px;
+  background: rgba(0,0,0,.35);
+  border:1px solid rgba(255,255,255,.18);
+  z-index:2;
+}
+
+/* ✅ LÉGENDE 2 COLONNES bas-gauche */
+.legend{
+  position: fixed;
+  left: 10px;
+  bottom: 12px;
+  z-index: 5;
+
+  display:grid;
+  grid-template-columns: 1fr 1fr;   /* ✅ 2 colonnes */
+  gap:8px;
+
+  padding:10px;
+  border-radius:16px;
+  background: rgba(0,0,0,.22);
+  border:1px solid rgba(255,255,255,.10);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+
+  max-height: 38vh;
+  overflow:auto;
+  width: min(360px, calc(100vw - 20px));
+}
+
 .legend-item{
   display:flex;
   align-items:center;
   gap:10px;
 
-  font-size: 15px;
-  font-weight: 900;
-  letter-spacing: .2px;
+  font-size:13px;
+  font-weight:950;
 
-  background: rgba(0,0,0,.22);
-  padding: 8px 10px;
-  border-radius: 12px;
-  border:1px solid rgba(255,255,255,.10);
+  background: rgba(0,0,0,.16);
+  padding:8px 10px;
+  border-radius:14px;
+  border:1px solid rgba(255,255,255,.08);
   white-space:nowrap;
 }
 .legend-dot{
   width:16px;
   height:16px;
-  border-radius:4px;
+  border-radius:4px; /* carré */
   border:1px solid rgba(255,255,255,.18);
   flex:0 0 auto;
 }
 
-/* panel slide */
+/* ✅ PANEL demi-page */
 .panel-overlay{
   position:fixed;
   inset:0;
-  background:rgba(0,0,0,.5);
+  background:rgba(0,0,0,.55);
   display:flex;
   align-items:flex-end;
   opacity:0;
   pointer-events:none;
   transition:.25s;
+  z-index: 20;
 }
 .panel-overlay.active{
   opacity:1;
@@ -157,7 +196,7 @@ header{
 .panel{
   width:100%;
   height:55%;
-  background:rgba(0,0,0,.86);
+  background:rgba(0,0,0,.88);
   border-top-left-radius:18px;
   border-top-right-radius:18px;
   padding:14px;
@@ -165,23 +204,23 @@ header{
   transition:.25s;
   overflow:auto;
 }
-.panel-overlay.active .panel{
-  transform:translateY(0);
-}
+.panel-overlay.active .panel{ transform:translateY(0); }
+
 .panel h3{
   margin:0 0 10px 0;
-  font-weight:900;
+  font-weight:950;
   color:var(--orange);
 }
+
 .event{
-  margin-bottom:8px;
-  padding-bottom:6px;
+  margin-bottom:10px;
+  padding-bottom:8px;
   border-bottom:1px solid rgba(255,255,255,.10);
 }
 .event:last-child{border:none}
-.event-title{font-weight:900}
+.event-title{font-weight:950}
 .event-time{font-size:12px;opacity:.75}
-.event-note{font-size:12px;margin-top:4px;opacity:.92}
+.event-note{font-size:12px;margin-top:6px;opacity:.95; line-height:1.25}
 
 .close-btn{
   position:absolute;
@@ -214,7 +253,6 @@ header{
   <div class="grid" id="grid"></div>
 </div>
 
-<!-- ✅ Légende globale -->
 <div class="legend" id="legend"></div>
 
 <div class="panel-overlay" id="overlay">
@@ -225,12 +263,12 @@ header{
 </div>
 
 <script>
-const API="https://script.google.com/macros/s/AKfycbzPHCDdW7wkFCVkMOL_2srZmdnjZ1QKmToUFtqIZBPjSUNtOwM-Ac7ua0w9dhCv3oI/exec" // ✅ mets ton /exec
+const API="https://script.google.com/macros/s/XXXX/exec"; // ✅ METS TON /exec
 const YEAR=2026;
 
 const MONTHS=["Janvier","Février","Mars","Avril","Mai","Juin","Juillet","Août","Septembre","Octobre","Novembre","Décembre"];
 
-/* ✅ Fallback couleurs si categories vide */
+/* fallback couleurs */
 const DEFAULT_CATS = [
   ["Navette", "#2f7bd3"],
   ["FMA centre", "#ffb15a"],
@@ -243,7 +281,7 @@ const DEFAULT_CATS = [
 
 let currentMonth=0;
 let EVENTS=[];
-let CAT_COLORS={}; // category -> color
+let CAT_COLORS={};
 
 function jsonp(url,cb){
   return new Promise((res,rej)=>{
@@ -274,10 +312,7 @@ function mergeDefaultCats_(){
 function buildLegendGlobal_(){
   const legend=document.getElementById("legend");
   legend.innerHTML="";
-
-  const entries = Object.entries(CAT_COLORS)
-    .sort((a,b)=>a[0].localeCompare(b[0], "fr"));
-
+  const entries = Object.entries(CAT_COLORS).sort((a,b)=>a[0].localeCompare(b[0], "fr"));
   for(const [cat,color] of entries){
     const item=document.createElement("div");
     item.className="legend-item";
@@ -291,7 +326,7 @@ function buildLegendGlobal_(){
 }
 
 async function loadData(){
-  // 1) categories (couleurs)
+  // categories
   try{
     const cb1="cb_cat_"+Math.random().toString(36).slice(2);
     const cats=await jsonp(`${API}?view=planning_categories&callback=${cb1}`, cb1);
@@ -299,17 +334,16 @@ async function loadData(){
       const map={};
       for(const c of cats.categories){
         if(c && c.category){
-          map[c.category]=c.color || "#666";
+          map[String(c.category).trim()] = c.color || "#666";
         }
       }
-      CAT_COLORS = map;
+      CAT_COLORS=map;
     }
   }catch(e){}
-
   mergeDefaultCats_();
   buildLegendGlobal_();
 
-  // 2) events année
+  // events
   try{
     const cb2="cb_year_"+Math.random().toString(36).slice(2);
     const data=await jsonp(`${API}?view=planning_year&year=${YEAR}&callback=${cb2}`, cb2);
@@ -323,7 +357,6 @@ async function loadData(){
 
 function buildCalendar(){
   document.getElementById("monthTitle").innerText=MONTHS[currentMonth];
-
   const grid=document.getElementById("grid");
   grid.innerHTML="";
 
@@ -345,7 +378,7 @@ function buildCalendar(){
       continue;
     }
 
-    cell.innerText=dayNum;
+    cell.innerHTML = `<div class="num">${dayNum}</div>`;
 
     const dateStr=`${YEAR}-${String(currentMonth+1).padStart(2,"0")}-${String(dayNum).padStart(2,"0")}`;
     const dayEvents=monthEvents.filter(e=>e.date===dateStr);
@@ -361,18 +394,12 @@ function buildCalendar(){
       }else{
         cell.style.background=colors[0];
         const badge=document.createElement("div");
+        badge.className="badge";
         badge.textContent="+"+(colors.length-1);
-        badge.style.position="absolute";
-        badge.style.left="6px";
-        badge.style.bottom="6px";
-        badge.style.fontSize="10px";
-        badge.style.fontWeight="900";
-        badge.style.padding="2px 6px";
-        badge.style.borderRadius="999px";
-        badge.style.background="rgba(0,0,0,.35)";
-        badge.style.border="1px solid rgba(255,255,255,.18)";
         cell.appendChild(badge);
       }
+
+      cell.dataset.colored = "1";
 
       // cliquable seulement si note
       const hasNote = dayEvents.some(e => String(e.details||"").trim() !== "");
@@ -406,7 +433,7 @@ function openPanel(date,events){
       div.className="event";
       div.innerHTML=`
         <div class="event-title">${escapeHtml(e.title||"")}</div>
-        <div class="event-time">${escapeHtml(e.start||"")}${e.end?(" – "+escapeHtml(e.end)):""} • <span style="font-weight:900;color:${col}">${escapeHtml(cat||"")}</span></div>
+        <div class="event-time">${escapeHtml(e.start||"")}${e.end?(" – "+escapeHtml(e.end)):""} • <span style="font-weight:950;color:${col}">${escapeHtml(cat||"")}</span></div>
         <div class="event-note">${escapeHtml(e.details||"")}</div>
       `;
       content.appendChild(div);
@@ -416,7 +443,7 @@ function openPanel(date,events){
   overlay.classList.add("active");
 }
 
-/* ✅ NAVIGATION : boucle sur 12 mois */
+/* ✅ NAV : boucle 12 mois */
 document.getElementById("prev").onclick=()=>{
   currentMonth = (currentMonth + 11) % 12;
   buildCalendar();
