--- a/planning.html
+++ b/planning.html
@@ -264,7 +264,7 @@ header{
 
 <script>
 /* ✅ mets TON /exec ici */
-const API="https://script.google.com/macros/s/XXXX/exec";
+const API="https://script.google.com/macros/s/AKfycbzPHCDdW7wkFCVkMOL_2srZmdnjZ1QKmToUFtqIZBPjSUNtOwM-Ac7ua0w9dhCv3oI/exec";
 const YEAR=2026;
 
 const MONTHS=["Janvier","Février","Mars","Avril","Mai","Juin","Juillet","Août","Septembre","Octobre","Novembre","Décembre"];
