--- a/planning.html
+++ b/planning.html
@@ -98,24 +98,28 @@ header{
   justify-content:flex-end;
   align-items:flex-start;
 }
-.day.disabled{opacity:.18}
-.day.clickable{cursor:pointer}
-.day.clickable:active{transform:scale(.96)}
-
-.day .num{
+.day{
+  border-radius:12px;
+  min-height:46px;
+  padding:8px;
   position:relative;
-  z-index:2;
-  font-weight:950;
-  font-size:14px;
-  text-shadow: 0 10px 18px rgba(0,0,0,.6);
+
+  background: rgba(0,0,0,.55);
+  border:1px solid rgba(255,255,255,.10);
+
+  display:flex;
+  justify-content:flex-end;
+  align-items:flex-start;
+  transition:.2s;
 }
 
-/* voile pour garder le chiffre lisible sur couleurs */
-.day[data-colored="1"]::after{
-  content:"";
-  position:absolute; inset:0;
-  border-radius:12px;
-  background: rgba(0,0,0,.18);
+.day.disabled{
+  opacity:.18;
+}
+
+.day[data-colored="1"]{
+  border:2px solid rgba(255,255,255,.25);
+  box-shadow:0 0 0 1px rgba(0,0,0,.4) inset;
 }
 
 /* badge +N */
