--- a/planning.html
+++ b/planning.html
@@ -308,7 +308,8 @@
 
 <script>
   /********** CONFIG **********/
-  const API = "COLLE_ICI_TON_URL_EXEC"; // ✅ OBLIGATOIRE
+  const API = ""https://script.google.com/macros/s/AKfycbzPHCDdW7wkFCVkMOL_2srZmdnjZ1QKmToUFtqIZBPjSUNtOwM-Ac7ua0w9dhCv3oI/exec";
+ // ✅ OBLIGATOIRE
   const BACK_URL = "index.html";
   const YEAR = 2026;
 
