--- a/planning.html
+++ b/planning.html
@@ -308,7 +308,7 @@
 
 <script>
   /********** CONFIG **********/
-  const API = ""https://script.google.com/macros/s/AKfycbzPHCDdW7wkFCVkMOL_2srZmdnjZ1QKmToUFtqIZBPjSUNtOwM-Ac7ua0w9dhCv3oI/exec";
+  const API = "https://script.google.com/macros/s/AKfycbzPHCDdW7wkFCVkMOL_2srZmdnjZ1QKmToUFtqIZBPjSUNtOwM-Ac7ua0w9dhCv3oI/exec";
  // ✅ OBLIGATOIRE
   const BACK_URL = "index.html";
   const YEAR = 2026;
