--- a/planning.html
+++ b/planning.html
@@ -15,7 +15,7 @@
       --orange:#d46a00;
       --orange2:#b95800;
 
-      --today:#ff3b30;
+      --today:#fff200;
       --note:#ffd400;
     }
     *{box-sizing:border-box}
