--- a/planning.html
+++ b/planning.html
@@ -183,8 +183,8 @@
       border-color: rgba(255,59,48,.55);
     }
     .day.has-note{
-      box-shadow: inset 0 0 0 3px rgba(255,212,0,.92);
-      border-color: rgba(255,212,0,.55);
+      box-shadow: inset 0 0 0 4px rgba(255,212,0,.92);
+      border-color: #fff200;
       cursor:pointer;
     }
 
