--- a/planning.html
+++ b/planning.html
@@ -179,7 +179,7 @@
     }
     .day span{ position:relative; z-index:1; }
     .day.is-today{
-      box-shadow: inset 0 0 0 3px rgba(255,59,48,.95);
+      box-shadow: inset 0 0 0 4px rgba(255,59,48,.95);
       border-color: rgba(255,59,48,.55);
     }
     .day.has-note{
@@ -187,6 +187,11 @@
       border-color: #fff200;
       cursor:pointer;
     }
+    .day.has-note span{
+  color:#fff200;
+  font-weight:950;
+  text-shadow: 0 0 6px rgba(255,242,0,.8);
+}
 
     /* ✅ légende TOUJOURS visible */
     .legend{
